--- a/Subgroup B/Question_1_Inventory_Optimisation.ipynb
+++ b/Subgroup B/Question_1_Inventory_Optimisation.ipynb
@@ -22647,7 +22647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -22915,6 +22915,7 @@
         }
        ],
        "layout": {
+        "height": 1000,
         "legend": {
          "bordercolor": "Black",
          "borderwidth": 1,
@@ -23741,6 +23742,7 @@
         "title": {
          "text": "Inventory Levels, Reorder Points, and Safety Stock with Lead Time and Future Demand Consideration"
         },
+        "width": 1400,
         "xaxis": {
          "title": {
           "text": "Date"
@@ -26098,7 +26100,9 @@
     "    yaxis_title=\"Inventory / Demand\",\n",
     "    legend=dict(x=1.02, y=1, bordercolor=\"Black\", borderwidth=1),\n",
     "    template=\"plotly_white\",\n",
-    "    showlegend=True\n",
+    "    showlegend=True,\n",
+    "    height=1000,\n",
+    "    width=1400,\n",
     ")\n",
     "\n",
     "fig.show()\n",
@@ -26282,7 +26286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -27452,7 +27456,7 @@
         "title": {
          "text": "Cumulative Cost and Revenue Comparison for Inventory Management Strategies"
         },
-        "width": 1300,
+        "width": 1400,
         "xaxis": {
          "title": {
           "text": "Date"
@@ -27546,7 +27550,7 @@
     "    legend=dict(x=1.02, y=1, bordercolor=\"Black\", borderwidth=1),\n",
     "    template=\"plotly_white\",\n",
     "    height=1000,\n",
-    "    width=1300,\n",
+    "    width=1400,\n",
     "    showlegend=True\n",
     ")\n",
     "\n",
