Analysis of Customer Retention and Lifetime Value

--- a/Subgroup A/Question_2_Analysis_of_Customer_Retention_and_Lifetime_Value.ipynb
+++ b/Subgroup A/Question_2_Analysis_of_Customer_Retention_and_Lifetime_Value.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Strategic Framework for Enhancing Customer Retention and Lifetime Value in E-Commerce Business Through Data-Driven Insights**\n",
+    "# **Strategic Framework for Enhancing Customer Retention and Lifetime Value in E-Commerce Business Through Data-Driven Insights** \n",
     "---"
    ]
   },
@@ -501,31 +501,31 @@
       "Columns: ['order_id', 'product_id', 'session_id', 'is_campaign', 'campaign', 'main_category', 'price', 'total_sold', 'title', 'Stock', 'customer_id', 'promotional_discount_type', 'gender', 'price_range', 'order_time', 'discount']\n",
       "First few rows:\n",
       "   order_id  product_id  session_id  is_campaign              campaign  \\\n",
-      "0   6523388       11033      256011            1  Livestream Exclusive   \n",
-      "1   6650634       16678      765529            1     Bundle promotions   \n",
-      "2   4404572       18974      890156            1     Next Day Delivery   \n",
-      "3   2334489         841      271656            1            Mega Sales   \n",
-      "4   9624682         248       98735            1            Mega Sales   \n",
+      "0   6523388       11047      256011            1  Livestream Exclusive   \n",
+      "1   6650634       16682      765529            1     Bundle promotions   \n",
+      "2   4404572       18997      890156            1     Next Day Delivery   \n",
+      "3   2334489         900      271656            1            Mega Sales   \n",
+      "4   9624682         266       98735            1            Mega Sales   \n",
       "\n",
       "          main_category      price  total_sold  \\\n",
-      "0           Men Clothes   1.245648       357.0   \n",
-      "1  Men's Bags & Wallets   1.837331        92.0   \n",
-      "2  Mobile & Accessories  52.628629       410.0   \n",
-      "3       Health & Beauty   6.524081     20500.0   \n",
-      "4           Men Clothes   4.979478      7100.0   \n",
+      "0       Health & Beauty   3.643520       662.0   \n",
+      "1  Mobile & Accessories   6.228240       173.0   \n",
+      "2  Mobile & Accessories  71.310235        25.0   \n",
+      "3         Women Clothes  30.144682         3.0   \n",
+      "4         Women Clothes   8.408124       916.0   \n",
       "\n",
       "                                               title  Stock  customer_id  \\\n",
-      "0  CUSTOM T-shirt Jersey Printing Cetak Baju Micr...   5094       105910   \n",
-      "1  7Y2 Al Sahhia Beam Chest Waist Crossbody Men W...    945        45999   \n",
-      "2  Ship Today Anker 622 Magnetic Battery (MagGo) ...    131        53473   \n",
-      "3  Durex Love Condoms 12's [For man] Basic, Regul...   1123        34849   \n",
-      "4  Men's Underwear Cavin kein (BOX+3PS) Boxer Ice...   2628       119010   \n",
+      "0  READY STOCK ! NEW AS BASIC GEL POLISH 新包装美甲多功能...    158       105910   \n",
+      "1  🚚🇲🇾Land Rover W2019/R1 13800mAh Dual Flash/W20...    342        45999   \n",
+      "2  Marshall Major 2 Bluetooth Headphones Wireless...     10        53473   \n",
+      "3  Scuba Diving Suit 1.5MM Wetsuit for Men Neopre...   2247        34849   \n",
+      "4  comfortLOVA STYLE SAFWAA SUIT, MUSLIMAH SUIT, ...   5566       119010   \n",
       "\n",
       "  promotional_discount_type  gender price_range  order_time  discount  \n",
       "0              Fixed Amount    Male         Low  2019-02-02         1  \n",
       "1                Percentage    Male         Low  2019-12-03         7  \n",
       "2                Percentage  Female         Mid  2019-04-04         8  \n",
-      "3              Fixed Amount    Male         Low  2019-02-02         5  \n",
+      "3              Fixed Amount    Male     Mid-Low  2019-02-02        21  \n",
       "4                Percentage  Female         Low  2019-06-06         0  \n",
       "\n",
       "Data Types:\n",
@@ -569,38 +569,38 @@
       "Statistical Summary (Numerical Columns):\n",
       "           order_id     product_id     session_id    is_campaign  \\\n",
       "count  1.000000e+05  100000.000000  100000.000000  100000.000000   \n",
-      "mean   5.042781e+06    9951.149740  500758.345020       0.925840   \n",
-      "std    2.849399e+06    5955.615317  288046.006384       0.262032   \n",
+      "mean   5.042781e+06    9954.835050  500758.345020       0.925840   \n",
+      "std    2.849399e+06    5951.383692  288046.006384       0.262032   \n",
       "min    1.000370e+05       1.000000       8.000000       0.000000   \n",
-      "25%    2.573297e+06    4352.000000  252083.500000       1.000000   \n",
-      "50%    5.032104e+06   10037.000000  500158.500000       1.000000   \n",
-      "75%    7.494062e+06   15149.000000  750604.500000       1.000000   \n",
-      "max    9.999797e+06   20309.000000  999996.000000       1.000000   \n",
+      "25%    2.573297e+06    4324.000000  252083.500000       1.000000   \n",
+      "50%    5.032104e+06   10064.500000  500158.500000       1.000000   \n",
+      "75%    7.494062e+06   15107.000000  750604.500000       1.000000   \n",
+      "max    9.999797e+06   20311.000000  999996.000000       1.000000   \n",
       "\n",
       "               price     total_sold         Stock    customer_id  \\\n",
       "count  100000.000000  100000.000000  1.000000e+05  100000.000000   \n",
-      "mean       43.250367    1869.838510  4.979844e+04   77351.290750   \n",
-      "std       146.552881    6414.910772  8.391300e+05   32585.099458   \n",
+      "mean       39.962045    1807.879690  7.397011e+04   77351.290750   \n",
+      "std       144.018314    6152.522265  1.539461e+06   32585.099458   \n",
       "min         1.002747       1.000000  0.000000e+00     299.000000   \n",
-      "25%         4.328627      45.000000  7.800000e+01   53217.000000   \n",
-      "50%        14.013540     239.000000  4.550000e+02   81389.000000   \n",
-      "75%        28.027080    1200.000000  3.192000e+03  106672.000000   \n",
-      "max      3845.626841  239500.000000  3.776248e+07  127901.000000   \n",
+      "25%         2.491296      47.000000  8.900000e+01   53217.000000   \n",
+      "50%        11.827428     241.000000  5.410000e+02   81389.000000   \n",
+      "75%        26.470020    1200.000000  4.004000e+03  106672.000000   \n",
+      "max      3845.626841  239500.000000  1.598321e+08  127901.000000   \n",
       "\n",
       "            discount  \n",
       "count  100000.000000  \n",
-      "mean       15.648050  \n",
-      "std        61.390503  \n",
+      "mean       14.583190  \n",
+      "std        57.277842  \n",
       "min         0.000000  \n",
       "25%         0.000000  \n",
-      "50%         4.000000  \n",
-      "75%        17.000000  \n",
-      "max      2666.000000  \n",
+      "50%         3.000000  \n",
+      "75%        16.000000  \n",
+      "max      2550.000000  \n",
       "\n",
       "Unique Values in Categorical Columns:\n",
       "campaign: 6 unique values\n",
-      "main_category: 24 unique values\n",
-      "title: 9410 unique values\n",
+      "main_category: 23 unique values\n",
+      "title: 10265 unique values\n",
       "promotional_discount_type: 2 unique values\n",
       "gender: 2 unique values\n",
       "price_range: 5 unique values\n",
@@ -635,7 +635,7 @@
       "\n",
       "      target_audience  \n",
       "0  returning customer  \n",
-      "1        new customer  \n",
+      "1  returning customer  \n",
       "2  returning customer  \n",
       "3  returning customer  \n",
       "4  returning customer  \n",
@@ -703,7 +703,7 @@
       "promotional_discount_type: 2 unique values\n",
       "gender: 2 unique values\n",
       "age_group: 6 unique values\n",
-      "target_audience: 2 unique values\n",
+      "target_audience: 1 unique values\n",
       "\n",
       "--------------------------------------------------\n",
       "\n",
@@ -1145,31 +1145,31 @@
       "\n",
       "Cleaned Shopee Sales Data Sample:\n",
       "    order_id  product_id  session_id  is_campaign              campaign  \\\n",
-      "0   6523388       11033      256011            1  Livestream Exclusive   \n",
-      "1   6650634       16678      765529            1     Bundle promotions   \n",
-      "2   4404572       18974      890156            1     Next Day Delivery   \n",
-      "3   2334489         841      271656            1            Mega Sales   \n",
-      "4   9624682         248       98735            1            Mega Sales   \n",
+      "0   6523388       11047      256011            1  Livestream Exclusive   \n",
+      "1   6650634       16682      765529            1     Bundle promotions   \n",
+      "2   4404572       18997      890156            1     Next Day Delivery   \n",
+      "3   2334489         900      271656            1            Mega Sales   \n",
+      "4   9624682         266       98735            1            Mega Sales   \n",
       "\n",
       "          main_category      price  total_sold  \\\n",
-      "0           Men Clothes   1.245648       357.0   \n",
-      "1  Men's Bags & Wallets   1.837331        92.0   \n",
-      "2  Mobile & Accessories  52.628629       410.0   \n",
-      "3       Health & Beauty   6.524081     20500.0   \n",
-      "4           Men Clothes   4.979478      7100.0   \n",
+      "0       Health & Beauty   3.643520       662.0   \n",
+      "1  Mobile & Accessories   6.228240       173.0   \n",
+      "2  Mobile & Accessories  71.310235        25.0   \n",
+      "3         Women Clothes  30.144682         3.0   \n",
+      "4         Women Clothes   8.408124       916.0   \n",
       "\n",
       "                                               title  Stock  customer_id  \\\n",
-      "0  CUSTOM T-shirt Jersey Printing Cetak Baju Micr...   5094       105910   \n",
-      "1  7Y2 Al Sahhia Beam Chest Waist Crossbody Men W...    945        45999   \n",
-      "2  Ship Today Anker 622 Magnetic Battery (MagGo) ...    131        53473   \n",
-      "3  Durex Love Condoms 12's [For man] Basic, Regul...   1123        34849   \n",
-      "4  Men's Underwear Cavin kein (BOX+3PS) Boxer Ice...   2628       119010   \n",
+      "0  READY STOCK ! NEW AS BASIC GEL POLISH 新包装美甲多功能...    158       105910   \n",
+      "1  🚚🇲🇾Land Rover W2019/R1 13800mAh Dual Flash/W20...    342        45999   \n",
+      "2  Marshall Major 2 Bluetooth Headphones Wireless...     10        53473   \n",
+      "3  Scuba Diving Suit 1.5MM Wetsuit for Men Neopre...   2247        34849   \n",
+      "4  comfortLOVA STYLE SAFWAA SUIT, MUSLIMAH SUIT, ...   5566       119010   \n",
       "\n",
       "  promotional_discount_type  gender price_range order_time  discount  \n",
       "0              Fixed Amount    Male         Low 2019-02-02         1  \n",
       "1                Percentage    Male         Low 2019-12-03         7  \n",
       "2                Percentage  Female         Mid 2019-04-04         8  \n",
-      "3              Fixed Amount    Male         Low 2019-02-02         5  \n",
+      "3              Fixed Amount    Male     Mid-Low 2019-02-02        21  \n",
       "4                Percentage  Female         Low 2019-06-06         0  \n",
       "\n",
       "Cleaned Campaign Data Sample:\n",
@@ -1196,7 +1196,7 @@
       "\n",
       "      target_audience  campaign_duration  \n",
       "0  returning customer                  3  \n",
-      "1        new customer                  3  \n",
+      "1  returning customer                  3  \n",
       "2  returning customer                  2  \n",
       "3  returning customer                  3  \n",
       "4  returning customer                  2  \n",
