--- a/Subgroup B/Question_1_Inventory_Optimisation.ipynb
+++ b/Subgroup B/Question_1_Inventory_Optimisation.ipynb
@@ -5058,7 +5058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {
     "id": "YTprnfRtLOBA",
     "outputId": "0c652888-db3d-477e-e352-8dd1d560cad0"
@@ -8933,7 +8933,7 @@
          "showticklabels": false,
          "tickformat": "%b",
          "title": {
-          "text": "Date"
+          "text": ""
          }
         },
         "xaxis2": {
@@ -12867,7 +12867,7 @@
          "showticklabels": false,
          "tickformat": "%b",
          "title": {
-          "text": "Date"
+          "text": ""
          }
         },
         "xaxis2": {
@@ -12990,7 +12990,7 @@
     "    # Update layout for the figure\n",
     "    fig.update_layout(\n",
     "        title=title,\n",
-    "        xaxis=dict(title=\"Date\"),\n",
+    "        xaxis=dict(title=\"\"),\n",
     "        showlegend=False,\n",
     "        template=\"plotly_white\"\n",
     "    )\n",
