--- a/Subgroup B/Question_1_Inventory_Optimisation.ipynb
+++ b/Subgroup B/Question_1_Inventory_Optimisation.ipynb
@@ -120,9 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\MuhammadFauzan\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -492,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,11 +1015,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "pBRoFJtLLOBA"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_time</th>\n",
+       "      <th>avg_checkout_price</th>\n",
+       "      <th>avg_additional_discount</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>week</th>\n",
+       "      <th>month</th>\n",
+       "      <th>is_weekend</th>\n",
+       "      <th>products_discounted_percentage</th>\n",
+       "      <th>campaign_percentage</th>\n",
+       "      <th>avg_discount_percentage</th>\n",
+       "      <th>daily_sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>34.776539</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>49.442110</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.170872</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-01-02</td>\n",
+       "      <td>32.870396</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>55.951143</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.331015</td>\n",
+       "      <td>189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-01-03</td>\n",
+       "      <td>43.601366</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>57.866044</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.877008</td>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-01-04</td>\n",
+       "      <td>41.382315</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>58.230728</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.968851</td>\n",
+       "      <td>345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-01-05</td>\n",
+       "      <td>36.029246</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>57.913476</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.566274</td>\n",
+       "      <td>349</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  order_time  avg_checkout_price  avg_additional_discount  day_of_week  week  \\\n",
+       "0 2019-01-01           34.776539                      0.0          1.0   1.0   \n",
+       "1 2019-01-02           32.870396                      0.0          2.0   1.0   \n",
+       "2 2019-01-03           43.601366                      0.0          3.0   1.0   \n",
+       "3 2019-01-04           41.382315                      0.0          4.0   1.0   \n",
+       "4 2019-01-05           36.029246                      0.0          5.0   1.0   \n",
+       "\n",
+       "   month  is_weekend  products_discounted_percentage  campaign_percentage  \\\n",
+       "0    1.0         0.0                       49.442110                  0.0   \n",
+       "1    1.0         0.0                       55.951143                  0.0   \n",
+       "2    1.0         0.0                       57.866044                  0.0   \n",
+       "3    1.0         0.0                       58.230728                  0.0   \n",
+       "4    1.0         1.0                       57.913476                  0.0   \n",
+       "\n",
+       "   avg_discount_percentage  daily_sales  \n",
+       "0                25.170872          156  \n",
+       "1                26.331015          189  \n",
+       "2                27.877008          170  \n",
+       "3                27.968851          345  \n",
+       "4                26.566274          349  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "daily_aggregated_df_by_main_category = (\n",
     "    merged_df\n",
@@ -1169,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "id": "UzLjwD9qLOBA",
     "outputId": "82e526aa-992d-4e4b-da6d-9cfee3bfec53"
@@ -4968,7 +5114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "id": "YQB_uZnaLOBA",
     "outputId": "e09a3787-b64f-4f73-b3d5-4a5fb636ab2f"
@@ -5002,7 +5148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -5011,7 +5157,7 @@
        "Index(['Android Tablets', 'Occupational Attire', 'Business & Casual Shirts'], dtype='object', name='sub_category')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5058,7 +5204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {
     "id": "YTprnfRtLOBA",
     "outputId": "0c652888-db3d-477e-e352-8dd1d560cad0"
@@ -13136,15 +13282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20:56:44 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "20:56:44 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "17:43:57 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "17:43:57 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -14430,7 +14576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -16013,15 +16159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20:56:44 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "20:56:44 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "17:43:57 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "17:43:57 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -17171,7 +17317,7 @@
        "<Figure size 900x1500 with 5 Axes>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -17347,7 +17493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -18861,7 +19007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -20019,7 +20165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -21364,7 +21510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -22647,7 +22793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -26286,7 +26432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -27641,15 +27787,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20:56:46 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "20:56:46 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "17:43:59 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "17:43:59 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -27880,7 +28026,7 @@
           "dash": "dash"
          },
          "mode": "lines",
-         "name": "Prophet Safety Stock",
+         "name": "Prophet Forecast Safety Stock",
          "type": "scatter",
          "x": [
           "2019-08-01T00:00:00",
@@ -28977,7 +29123,6 @@
         }
        ],
        "layout": {
-        "height": 900,
         "legend": {
          "bordercolor": "Black",
          "borderwidth": 1,
@@ -29804,7 +29949,6 @@
         "title": {
          "text": "Optimal Inventory Levels, Reorder Points, and Safety Stock Levels for 01 August 2019 to 01 September 2019"
         },
-        "width": 1000,
         "xaxis": {
          "title": {
           "text": "Date"
@@ -29834,7 +29978,7 @@
           "dash": "dash"
          },
          "mode": "lines",
-         "name": "Optimal Order Cumulative Cost",
+         "name": "Optimal Strategy Cumulative Cost",
          "type": "scatter",
          "x": [
           "2019-08-01T00:00:00",
@@ -29908,7 +30052,7 @@
           "color": "green"
          },
          "mode": "lines",
-         "name": "Actual Cumulative Revenue",
+         "name": "Forecasted Cumulative Revenue",
          "type": "scatter",
          "x": [
           "2019-08-01T00:00:00",
@@ -29983,7 +30127,7 @@
          {
           "arrowhead": 1,
           "font": {
-           "color": "brown"
+           "color": "orange"
           },
           "showarrow": true,
           "text": "Optimal Profit: $140.16",
@@ -29991,7 +30135,6 @@
           "y": 874.6337351520707
          }
         ],
-        "height": 900,
         "legend": {
          "bordercolor": "Black",
          "borderwidth": 1,
@@ -30816,9 +30959,8 @@
          }
         },
         "title": {
-         "text": "Cumulative Forecasted Cost and Revenue for 01 August 2019 to 01 September 2019"
+         "text": "Forecasted Cumulative Cost and Revenue for 01 August 2019 to 01 September 2019"
         },
-        "width": 1000,
         "xaxis": {
          "title": {
           "text": "Date"
@@ -30839,8 +30981,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "20:56:47 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "20:56:47 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "17:43:59 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "17:43:59 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -31071,7 +31213,7 @@
           "dash": "dash"
          },
          "mode": "lines",
-         "name": "Prophet Safety Stock",
+         "name": "Prophet Forecast Safety Stock",
          "type": "scatter",
          "x": [
           "2020-01-01T00:00:00",
@@ -32168,7 +32310,6 @@
         }
        ],
        "layout": {
-        "height": 900,
         "legend": {
          "bordercolor": "Black",
          "borderwidth": 1,
@@ -32995,7 +33136,6 @@
         "title": {
          "text": "Optimal Inventory Levels, Reorder Points, and Safety Stock Levels for 01 January 2020 to 01 February 2020"
         },
-        "width": 1000,
         "xaxis": {
          "title": {
           "text": "Date"
@@ -33025,7 +33165,7 @@
           "dash": "dash"
          },
          "mode": "lines",
-         "name": "Optimal Order Cumulative Cost",
+         "name": "Optimal Strategy Cumulative Cost",
          "type": "scatter",
          "x": [
           "2020-01-01T00:00:00",
@@ -33099,7 +33239,7 @@
           "color": "green"
          },
          "mode": "lines",
-         "name": "Actual Cumulative Revenue",
+         "name": "Forecasted Cumulative Revenue",
          "type": "scatter",
          "x": [
           "2020-01-01T00:00:00",
@@ -33174,7 +33314,7 @@
          {
           "arrowhead": 1,
           "font": {
-           "color": "brown"
+           "color": "orange"
           },
           "showarrow": true,
           "text": "Optimal Profit: $604.82",
@@ -33182,7 +33322,6 @@
           "y": 835.8206927865689
          }
         ],
-        "height": 900,
         "legend": {
          "bordercolor": "Black",
          "borderwidth": 1,
@@ -34007,9 +34146,8 @@
          }
         },
         "title": {
-         "text": "Cumulative Forecasted Cost and Revenue for 01 January 2020 to 01 February 2020"
+         "text": "Forecasted Cumulative Cost and Revenue for 01 January 2020 to 01 February 2020"
         },
-        "width": 1000,
         "xaxis": {
          "title": {
           "text": "Date"
@@ -34140,7 +34278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
