--- a/Subgroup B/Question_3_Supply_Chain_Optimisation.ipynb
+++ b/Subgroup B/Question_3_Supply_Chain_Optimisation.ipynb
@@ -7,7 +7,7 @@
     "id": "6gOwV9_dfpL0"
    },
    "source": [
-    "**How can we improve the efficiency of our supply chain?**\n",
+    "# **How can we improve the efficiency of our supply chain?**\n",
     "\n",
     "*   Analyze supplier performance and identify bottlenecks.\n",
     "*   Optimize order fulfillment processes to reduce delivery times."
