--- a/Subgroup B/Question_1_Inventory_Optimisation.ipynb
+++ b/Subgroup B/Question_1_Inventory_Optimisation.ipynb
@@ -11,7 +11,7 @@
     "---\n",
     "\n",
     "# Project Overview\n",
-    "This project aims to enhance an e-commerce company’s inventory management and operational efficiency by accurately forecasting product demand. In the fast-moving and competitive e-commerce industry, understanding future demand patterns is critical for optimizing stock levels, minimizing stockouts and overstock, and ultimately improving customer satisfaction and profitability.\n",
+    "This project aims to enhance inventory management and operational efficiency for Shopee sellers by accurately forecasting product demand. In the fast-moving and competitive e-commerce industry, understanding future demand patterns is critical for optimizing stock levels, minimizing stockouts and overstock, and ultimately improving customer satisfaction and profitability.\n",
     "\n",
     "In prior analysis, a previous subgroup explored how factors like **discounts, pricing, and product ratings** influence customer purchasing behavior. This exploration provided valuable insights into how promotions and perceived product value impact demand, revealing patterns that could guide pricing and discount strategies. Building on these findings, this project focuses on analyzing **seasonality trends** and leveraging them to accurately predict demand, enabling more precise and cost-effective inventory management.\n",
     "\n",
@@ -13289,8 +13289,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "17:43:57 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "17:43:57 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "18:25:14 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "18:25:14 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -16166,8 +16166,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "17:43:57 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "17:43:57 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "18:25:14 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "18:25:14 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -27754,14 +27754,14 @@
     "\n",
     "#### Key Components and Setup\n",
     "1. **Sales Event Dates**:\n",
-    "   - `sale_dates`: A dictionary defining various promotional and seasonal sales dates, structured to impact the forecast:\n",
+    "   - `sale_dates`: Default set to 'None'. A dictionary defining various promotional and seasonal sales dates, structured to impact the forecast. An example includes the following:\n",
     "     - `high_priority_mega_sales_dates`: Key sales events anticipated to drive high demand.\n",
     "     - `additional_mega_sales_dates`: Additional promotions that may moderately increase demand.\n",
     "     - `other_seasonal_sales_dates`: Various seasonal events and holidays that could affect sales patterns.\n",
     "\n",
     "2. **Forecasting Parameters**:\n",
     "   - **Forecast Duration**: \n",
-    "     - `number_of_months_to_forecast`: Set to `1` here, specifying a one-month forecast period, but this can be adjusted as needed.\n",
+    "     - `number_of_months_to_forecast`: Default set to `1` here, specifying a one-month forecast period, but this can be adjusted as needed.\n",
     "   - **Inventory and Cost Variables** (placeholders):\n",
     "     - `current_stock`: Starting stock level.\n",
     "     - `current_produce_cost`: Cost to produce each unit.\n",
@@ -27774,11 +27774,13 @@
     "     - `test_forecast`: Generates a forecast for the month following the `test_period` (`2019-07-31`) to assess the model's accuracy on historical data.\n",
     "   - **Future Forecast**:\n",
     "     - `future_forecast`: Projects demand for the next month using the entire dataset (`sub_cat_df`), enabling proactive inventory management.\n",
-    "\n",
+    "   - **Optimal Inventory Strategy**:\n",
+    "     - `plot_inventory_strategy`: Projects optimal inventory strategy for the next month using the forecasted dataset (`future_forecast`), enabling proactive inventory management.\n",
+    "    \n",
     "---\n",
     "\n",
     "#### Insights\n",
-    "The `forecast_next_n_months` function, customized from Prophet, enhances forecasting accuracy by incorporating business-specific variables like promotional events and lead time. This flexibility allows the function to adapt to varying inventory requirements and business cycles. By generating demand forecasts that align closely with actual sales patterns, the function helps businesses better manage stock levels, optimize costs, and respond to demand fluctuations more effectively.\n",
+    "The `forecast_next_n_months` function, customized from Prophet, enhances forecasting accuracy by incorporating business-specific variables like promotional events and lead time. This flexibility allows the function to adapt to varying inventory requirements and business cycles. By generating demand forecasts that align closely with actual sales patterns, the `plot_inventory_strategy` function helps businesses better manage stock levels, optimize costs, and respond to demand fluctuations more effectively.\n",
     "\n",
     "#### Note\n",
     "While the parameters here are placeholders, they demonstrate the function's adaptability. Users can adjust these inputs to reflect their specific inventory and cost structure, making `forecast_next_n_months` a versatile tool for tailored forecasting across different scenarios.\n",
@@ -27794,8 +27796,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "17:43:59 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "17:43:59 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "18:25:17 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "18:25:17 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -29947,7 +29949,7 @@
          }
         },
         "title": {
-         "text": "Optimal Inventory Levels, Reorder Points, and Safety Stock Levels for 01 August 2019 to 01 September 2019"
+         "text": "Optimal Inventory Levels, Reorder Points, and Safety Stock Levels for 01 August 2019 to 31 August 2019"
         },
         "xaxis": {
          "title": {
@@ -30959,7 +30961,7 @@
          }
         },
         "title": {
-         "text": "Forecasted Cumulative Cost and Revenue for 01 August 2019 to 01 September 2019"
+         "text": "Forecasted Cumulative Cost and Revenue for 01 August 2019 to 31 August 2019"
         },
         "xaxis": {
          "title": {
@@ -30981,8 +30983,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "17:43:59 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "17:43:59 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "18:25:18 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "18:25:18 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -33134,7 +33136,7 @@
          }
         },
         "title": {
-         "text": "Optimal Inventory Levels, Reorder Points, and Safety Stock Levels for 01 January 2020 to 01 February 2020"
+         "text": "Optimal Inventory Levels, Reorder Points, and Safety Stock Levels for 01 January 2020 to 31 January 2020"
         },
         "xaxis": {
          "title": {
@@ -34146,7 +34148,7 @@
          }
         },
         "title": {
-         "text": "Forecasted Cumulative Cost and Revenue for 01 January 2020 to 01 February 2020"
+         "text": "Forecasted Cumulative Cost and Revenue for 01 January 2020 to 31 January 2020"
         },
         "xaxis": {
          "title": {
@@ -34167,6 +34169,8 @@
    ],
    "source": [
     "from Prophet_Forecast import forecast_next_n_months\n",
+    "from Prophet_Forecast import plot_inventory_strategy\n",
+    "\n",
     "\n",
     "sale_dates = {'high_priority_mega_sales_dates':['2019-11-11', '2019-09-09', '2019-10-10', '2019-12-12'],\n",
     "              'additional_mega_sales_dates':['2019-03-03', '2019-04-04', '2019-05-05', '2019-06-06', '2019-07-07', '2019-08-08'],\n",
@@ -34187,9 +34191,10 @@
     "product_price = avg_checkout_price\n",
     "\n",
     "test_period = '2019-07-31'\n",
-    "\n",
-    "test_forecast = forecast_next_n_months(sub_cat_df[sub_cat_df.order_time <= test_period], sale_dates, number_of_months_to_forecast, current_stock, current_produce_cost, current_holding_cost, lead_time, product_price)\n",
-    "future_forecast = forecast_next_n_months(sub_cat_df, sale_dates, number_of_months_to_forecast, current_stock, current_produce_cost, current_holding_cost, lead_time, product_price)"
+    "test_forecast = forecast_next_n_months(sub_cat_df[sub_cat_df.order_time <= test_period], lead_time, sale_dates, number_of_months_to_forecast)\n",
+    "plot_inventory_strategy(test_forecast, current_stock, current_produce_cost, current_holding_cost, lead_time, product_price)\n",
+    "future_forecast = forecast_next_n_months(sub_cat_df, lead_time, sale_dates, number_of_months_to_forecast)\n",
+    "plot_inventory_strategy(future_forecast, current_stock, current_produce_cost, current_holding_cost, lead_time, product_price)"
    ]
   },
   {
